Made Daniel red

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,23 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<head><head>
+<body>
+<h1>Daniel</h1>
+<p>I am a ten year old boy.</p>
+
+
+<p>
+
+respond_to :json
+	render :text =>
+  	'{ "info": [
+
+      { "Name": "SPANIEL"
+    
+      }
+			  ]
+      }'
+
+</p>
+</body>
+
+
+	
