--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,5 +1,15 @@
-// Place all the styles related to the home controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+h1 {
+	color: red;
 
+}
 
+p {
+	color: blue;
+
+}
+
+body {
+    color: purple;
+	background: brown;
+    text-align: center;
+}
