--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,13 @@
-<head><head>
+<head>
+<link rel="stylesheet" type="text/css" href="home.css.scss" />
+
+<head>
 <body>
 <h1>Daniel</h1>
-<p>I am a ten year old boy.</p>
+<h3>I am a ten year old boy.</h3>
 
 
-<p>
+<p1>
 
 respond_to :json
 	render :text =>
@@ -16,7 +19,7 @@ respond_to :json
 			  ]
       }'
 
-</p>
+</p1>
 </body>
 
 
